objects/agf__ADM_Epic__c.object
<CustomObject>
    <fields>
        <fullName>agf__Category__c</fullName>
        <label>Category</label>
        <type>Picklist</type>
        <valueSet>
            <valueSetDefinition>
                <value>
                    <fullName>Component</fullName>
                </value>
                <value>
                    <fullName>Feature</fullName>
                </value>
                <value>
                    <fullName>Trust</fullName>
                </value>
            </valueSetDefinition>
        </valueSet>
    </fields>
    <fields>
        <fullName>agf__Committed_By_Team__c</fullName>
        <defaultValue>false</defaultValue>
        <label>Committed By Team</label>
        <type>Checkbox</type>
    </fields>
    <fields>
        <fullName>agf__Description__c</fullName>
        <label>Description</label>
        <length>32768</length>
        <type>LongTextArea</type>
    </fields>
    <fields>
        <fullName>agf__Design_Complete__c</fullName>
        <label>Design Complete</label>
        <type>Picklist</type>
        <valueSet>
            <valueSetDefinition>
                <value>
                    <fullName>Yes</fullName>
                </value>
                <value>
                    <fullName>No</fullName>
                </value>
                <value>
                    <fullName>N/A</fullName>
                </value>
            </valueSetDefinition>
        </valueSet>
    </fields>
    <fields>
        <fullName>agf__Design_Lead__c</fullName>
        <complianceGroup>PII</complianceGroup>
        <deleteConstraint>SetNull</deleteConstraint>
        <label>Design Lead</label>
        <referenceTo>User</referenceTo>
        <relationshipName>Design_Lead_Epics</relationshipName>
        <type>Lookup</type>
    </fields>
    <fields>
        <fullName>agf__Development_Lead__c</fullName>
        <complianceGroup>PII</complianceGroup>
        <deleteConstraint>SetNull</deleteConstraint>
        <label>Development Lead</label>
        <referenceTo>User</referenceTo>
        <relationshipName>Development_Lead_Epics</relationshipName>
        <type>Lookup</type>
    </fields>
    <fields>
        <fullName>agf__End_Date__c</fullName>
        <label>End Date</label>
        <type>Date</type>
    </fields>
    <fields>
        <fullName>agf__Health__c</fullName>
        <complianceGroup>HIPAA</complianceGroup>
        <label>Health</label>
        <type>Picklist</type>
        <valueSet>
            <valueSetDefinition>
                <value>
                    <fullName>On Track</fullName>
                    <color>#419249</color>
                    <default>true</default>
                    <label>On Track</label>
                </value>
                <value>
                    <fullName>Watch</fullName>
                    <color>#F3D904</color>
                    <label>Watch</label>
                </value>
                <value>
                    <fullName>Blocked</fullName>
                    <color>#CC0000</color>
                    <label>Blocked</label>
                </value>
                <value>
                    <fullName>Not Started</fullName>
                    <color>#DDDDDD</color>
                    <label>Not Started</label>
                </value>
                <value>
                    <fullName>On Hold</fullName>
                    <color>#996633</color>
                    <label>On Hold</label>
                </value>
                <value>
                    <fullName>Completed</fullName>
                    <color>#3366FF</color>
                    <label>Completed</label>
                </value>
                <value>
                    <fullName>Canceled</fullName>
                    <color>#000000</color>
                    <label>Canceled</label>
                </value>
                <value>
                    <fullName>Green</fullName>
                </value>
                <value>
                    <fullName>Yellow</fullName>
                </value>
                <value>
                    <fullName>Red</fullName>
                </value>
            </valueSetDefinition>
        </valueSet>
    </fields>
    <fields>
        <fullName>agf__Performance_Lead__c</fullName>
        <complianceGroup>PII</complianceGroup>
        <deleteConstraint>SetNull</deleteConstraint>
        <label>Performance Lead</label>
        <referenceTo>User</referenceTo>
        <relationshipName>Performance_Lead_Epics</relationshipName>
        <type>Lookup</type>
    </fields>
    <fields>
        <fullName>agf__Priority__c</fullName>
        <label>Priority</label>
        <precision>3</precision>
        <scale>0</scale>
        <type>Number</type>
    </fields>
    <fields>
        <fullName>agf__Project__c</fullName>
        <deleteConstraint>Restrict</deleteConstraint>
        <label>Project</label>
        <referenceTo>agf__PPM_Project__c</referenceTo>
        <relationshipLabel>Epics</relationshipLabel>
        <relationshipName>Epics</relationshipName>
        <type>Lookup</type>
    </fields>
    <fields>
        <fullName>agf__Quality_Lead__c</fullName>
        <complianceGroup>PII</complianceGroup>
        <deleteConstraint>SetNull</deleteConstraint>
        <label>Quality Lead</label>
        <referenceTo>User</referenceTo>
        <relationshipName>Quality_Lead_Epics</relationshipName>
        <type>Lookup</type>
    </fields>
    <fields>
        <fullName>agf__Scheduled_Build__c</fullName>
        <deleteConstraint>SetNull</deleteConstraint>
        <label>Scheduled Build</label>
        <referenceTo>agf__ADM_Build__c</referenceTo>
        <relationshipLabel>Epics</relationshipLabel>
        <relationshipName>Epics</relationshipName>
        <type>Lookup</type>
    </fields>
    <fields>
        <fullName>agf__Start_Date__c</fullName>
        <label>Start Date</label>
        <type>Date</type>
    </fields>
    <fields>
        <fullName>agf__T_Shirt_Size__c</fullName>
        <label>T-Shirt Size</label>
        <type>Picklist</type>
        <valueSet>
            <valueSetDefinition>
                <value>
                    <fullName>Small</fullName>
                </value>
                <value>
                    <fullName>Medium</fullName>
                </value>
                <value>
                    <fullName>Large</fullName>
                </value>
                <value>
                    <fullName>Extra Large</fullName>
                </value>
            </valueSetDefinition>
        </valueSet>
    </fields>
    <fields>
        <fullName>agf__Team__c</fullName>
        <deleteConstraint>Restrict</deleteConstraint>
        <label>Team</label>
        <lookupFilter>
            <active>true</active>
            <errorMessage>Please select an active team.</errorMessage>
            <filterItems>
                <field>agf__ADM_Scrum_Team__c.agf__Active__c</field>
                <operation>equals</operation>
                <value>True</value>
            </filterItems>
            <isOptional>false</isOptional>
        </lookupFilter>
        <referenceTo>agf__ADM_Scrum_Team__c</referenceTo>
        <relationshipLabel>Epics</relationshipLabel>
        <relationshipName>Epics</relationshipName>
        <type>Lookup</type>
    </fields>
    <fields>
        <fullName>agf__Tech_Design_Complete__c</fullName>
        <label>Tech Design Complete</label>
        <type>Picklist</type>
        <valueSet>
            <valueSetDefinition>
                <value>
                    <fullName>Yes</fullName>
                </value>
                <value>
                    <fullName>No</fullName>
                </value>
                <value>
                    <fullName>N/A</fullName>
                </value>
            </valueSetDefinition>
        </valueSet>
    </fields>
    <fields>
        <fullName>agf__Test_Design_Complete__c</fullName>
        <label>Test Design Complete</label>
        <type>Picklist</type>
        <valueSet>
            <valueSetDefinition>
                <value>
                    <fullName>Yes</fullName>
                </value>
                <value>
                    <fullName>No</fullName>
                </value>
                <value>
                    <fullName>N/A</fullName>
                </value>
            </valueSetDefinition>
        </valueSet>
    </fields>
    <label>Epic</label>
    <listViews>
        <fullName>agf__All</fullName>
        <filterScope>Everything</filterScope>
        <label>All</label>
    </listViews>
    <nameField>
        <label>Epic Name</label>
        <type>Text</type>
    </nameField>
    <pluralLabel>Epics</pluralLabel>
    <sharingModel>ReadWrite</sharingModel>
</CustomObject>